# DDC_CorpusStatistics

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  PACKAGE_STRUCTURE.md  README.md  advanced_corpus_analyzer.py  consolidated_excel_export.py  corpus_utilities.py  example_usage.py  library_holdings_reporter.py  newspaper_corpus_analyzer.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
dd_corpus_reports/: corpus_analysis_workbook.xlsx  corpus_detailed.csv  corpus_issues.csv  corpus_pivot_table_data.csv  corpus_statistics.json  library_holdings.csv  library_holdings_report.txt  missing_issues.csv  missing_issues_report.txt  readme
dd_corpus_tools/: __init__.py  advanced_analyzer.py  analyzer.py  cli.py  constants.py  excel_exporter.py  library_reporter.py  utilities.py
docs/: API_REFERENCE.md  EXCEL_PIVOT_TABLES_GUIDE.md  QUICK_REFERENCE.md  USER_GUIDE.md
examples/: example_usage.py
tests/: test_basic.py
