[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dd-corpus-tools"
version = "1.0.0"
description = "Analysis tools for the Divergent Discourses Tibetan Newspaper Corpus (1950-1965)"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Divergent Discourses Project", email = "diverge@uni-leipzig.de"}
]
maintainers = [
    {name = "Franz Xaver Erhard", email = "erhard@uni-leipzig.de"}
]
keywords = [
    "tibetan",
    "newspapers",
    "corpus-analysis",
    "digital-humanities",
    "historical-documents"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = []

[project.optional-dependencies]
excel = ["openpyxl>=3.0.0"]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950"
]
all = ["openpyxl>=3.0.0"]

[project.urls]
Homepage = "https://research.uni-leipzig.de/diverge/"
Documentation = "https://github.com/Divergent-Discourses/corpus-analysis-tools/tree/main/docs"
Repository = "https://github.com/Divergent-Discourses/corpus-analysis-tools"
"Bug Tracker" = "https://github.com/Divergent-Discourses/corpus-analysis-tools/issues"

[project.scripts]
dd-analyze = "dd_corpus_tools.cli:main_analyze"
dd-analyze-advanced = "dd_corpus_tools.cli:main_advanced"
dd-excel-export = "dd_corpus_tools.cli:main_excel"
dd-reports = "dd_corpus_tools.cli:main_reports"
dd-validate = "dd_corpus_tools.cli:main_validate"

[tool.setuptools.packages.find]
where = ["."]
include = ["dd_corpus_tools*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
dd_corpus_tools = ["data/*.json"]

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
